# ansible-role-dock

./: .ansible-lint  .cz.toml  .editorconfig  .gitignore  .gitmodules  .later.yml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  COPYRIGHT  Makefile  README.md  package.json  pyproject.toml  requirements.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release-please.yml
contrib/poetry-bin/: install.sh
defaults/: main.yml
meta/: main.yml
molecule/_partials/: ssh_config
molecule/_partials/defaults/: main.yml
molecule/_partials/playbooks/defaults-restored/: converge.yml  verify.yml
molecule/_partials/tasks/: setup.yml
molecule/common/: .ssh_config
molecule/common/tasks/: setup.yml
molecule/default/: converge.yml  molecule.yml
molecule/default/defaults/: main.yml
molecule/defaults-restored-on-localhost/: molecule.yml
molecule/defaults-restored-on-localhost/defaults/: main.yml
molecule/defaults-restored-over-ssh/: molecule.yml
molecule/dock-defaults-restored/: converge.yml  molecule.yml  verify.yml
tasks/: add.yml  dockutil-install.yml  install.yml  main.yml  map.yml  move.yml  position.yml  remove-all.yml  remove-item.yml  remove.yml  validate-all.yml  validate-pos.yml
templates/: add.j2  map.j2  move.j2  position.j2  remove.j2
tests/: ansible.cfg  inventory.yml  test.yml
tests/defaults/: main.yml
vars/: main.yml
