[tool.poetry]
name = "ansible-role-dock"
version = "0.0.0"
description = "Role is used to automate use of dockutil – command line tool for managing dock items. You can add, remove and re-arrange Dock items."
authors = ["lotyp <lotyp7@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^5.8.0"

[tool.poetry.dev-dependencies]
molecule = "^3.6.1"
ansible-compat = "^2.1.0"
ansible-lint = "^6.2.2"
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
